--- a/game-runner-config.json
+++ b/game-runner-config.json
@@ -4,8 +4,8 @@
   "game-engine-jar": "game-engine.jar",
   "verbose-mode": true,
   "max-runtime-ms": 1000,
-  "player-a": "./starter-bots/java-obstacle",
-  "player-b": "./starter-bots/java-best-obstacle",
+  "player-a": "java-obstacle",
+  "player-b": "java-best-obstacle",
   "max-request-retries": 10,
   "request-timeout-ms": 5000,
   "is-tournament-mode": false,
