update mark 2 & mark 3

--- a/game-runner-config.json
+++ b/game-runner-config.json
@@ -4,8 +4,8 @@
   "game-engine-jar": "game-engine.jar",
   "verbose-mode": true,
   "max-runtime-ms": 1000,
-  "player-a": "java-alt-obstacle-with-ability",
-  "player-b": "java-alt-obstacle-with-ability-mk2",
+  "player-a": "java-alt-obstacle",
+  "player-b": "java-alt-obstacle-with-ability-mk3",
   "max-request-retries": 10,
   "request-timeout-ms": 5000,
   "is-tournament-mode": false,
