--- a/AlgoritmaTamak/pom.xml
+++ b/AlgoritmaTamak/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>za.co.entelect.challenge</groupId>
-    <artifactId>java-alt-obstacle-abi-bot</artifactId>
+    <artifactId>AlgoritmaTamak</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
