--- a/game-runner-config.json
+++ b/game-runner-config.json
@@ -5,7 +5,7 @@
   "verbose-mode": true,
   "max-runtime-ms": 1000,
   "player-a": "AlgoritmaTamak",
-  "player-b": "AlgoritmaTamak",
+  "player-b": "./reference-bot/java",
   "max-request-retries": 10,
   "request-timeout-ms": 5000,
   "is-tournament-mode": false,
